2005-10-14  Vivek Jain <jvivek@novell.com>
	
	* proxy.c :(proxy_get_cnc)
	"use_ssl" should be Null checked before comparing it with any value. 
	its NULL when evo is not compiled with ssl support and caused crash.

2005-10-07  Vivek Jain <jvivek@novell.com>

	* share-folder.c : (remove_clicked)
	when we reach to the last item in the list, de-sensitize the remove
	button.
	
2005-10-05  Vivek Jain <jvivek@novell.com>
	
	* share-folder.c : (display_container) moved code for comparing id's
	to the getcontainer list part, we break if we find the matched.
	also check for null before comparing, free the values
	**Fixes #317906

2005-09-30  Vivek Jain <jvivek@novell.com>
	
	* shared-folder-common.c: (org_gnome_create_option)
	 			: (org_gnome_shared_folder_factory)
	* install-shared.c 	: (org_gnome_popup_wizard)
	enable shared-folder functionalilty, remove env check 

2005-09-28  Sankar P  <psankar@novell.com>

	*  proxy.c (proxy_dialog_store_widgets_data):
	Added code to handle the extra blank email that will be returned 
	from the ENameSelector, while auto-completion.
	Fixes #317400
	
2005-09-27  Vivek Jain <jvivek@novell.com>
	
	* install-shared.c: (accept_clicked): 
	 we have to connect "response" to (install_folder_response)
	 to make it work
	 don't destroy druid right now, wait till folder selector
	 dialog dies, make folder selector dialog modal

2005-08-25  Sankar P  <psankar@novell.com>

	*  proxy.c: (proxy_dialog_finalize):
	Replaced g_object_unref with g_free since priv was created using g_new.
	Fixes #312309

2005-08-23  Not Zed  <NotZed@Ximian.com>

	* proxy-login.c (proxy_get_password): return the right type.
	(proxy_soap_login): fix pointer cast.
	(proxy_login_add_new_store): fix pointer cast.
	(proxy_login_setup_tree_view): fix callback cast.
	(org_gnome_proxy_account_login): fix prototype to match use.

	* junk-settings.c (user_selected): fix calling.
	(junk_settings_construct): more stupid casts.

	* junk-mail-settings.c (junk_mail_settings): casts.
